--- a/src/components/core/Header/HeaderLogIn/LoginForm/Registration/Registration.css
+++ b/src/components/core/Header/HeaderLogIn/LoginForm/Registration/Registration.css
@@ -76,3 +76,14 @@
   color: red;
   font-size: 1rem;
 }
+.error-api {
+  display: flex;
+  justify-content: center;
+  color: red;
+}
+.loading {
+  display: flex;
+  margin: 0 auto;
+  height: 20%;
+  width: 20%;
+}
