--- a/src/components/core/Header/HeaderLogIn/LoginForm/LogIn/Login.css
+++ b/src/components/core/Header/HeaderLogIn/LoginForm/LogIn/Login.css
@@ -21,7 +21,6 @@
 .login__modal-wraper {
   margin: 0 auto;
   width: 100%;
-  height: 90%;
 }
 .login__modal-close {
   display: block;
@@ -78,7 +77,8 @@
 }
 .loading {
   display: flex;
-  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
   height: 20%;
   width: 20%;
 }
