--- a/src/components/core/HeaderSearch/HeaderSearch.css
+++ b/src/components/core/HeaderSearch/HeaderSearch.css
@@ -102,6 +102,19 @@
 .basket-all {
   display: flex;
   margin-left: 30px;
+  position: relative;
+}
+.count-basket {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  top: -5px;
+  right: -10px;
+  width: 15px;
+  height: 15px;
+  font-size: 0.75rem;
+  border-radius: 50%;
+  background-color: rgb(249, 218, 12);
 }
 .heart {
   width: 25px;
@@ -113,4 +126,5 @@
   height: 25px;
   margin-right: 5px;
   margin-left: 20px;
+  cursor: pointer;
 }
