--- a/src/components/core/BasketItem/BasketItem.css
+++ b/src/components/core/BasketItem/BasketItem.css
@@ -31,12 +31,19 @@
   height: 25px;
   cursor: pointer;
 }
+.vedro:hover {
+  transform: scale(1.3);
+}
 .basket-item-price {
   padding: 20px 0;
   opacity: 0.5;
 }
 .puy-oder {
   padding-bottom: 20px;
+  background-color: white;
+  width: 90%;
+  margin: auto;
+  border-radius: 10px;
 }
 .btn-puy-oder {
   display: block;
@@ -54,6 +61,8 @@
   display: flex;
   padding: 15px;
   justify-content: space-between;
+  background-color: #fff;
+  width: 90%;
 }
 .puy-oder-text {
   font-weight: 800;
