--- a/src/components/core/Shoes/Shoes.css
+++ b/src/components/core/Shoes/Shoes.css
@@ -43,6 +43,17 @@
   background-color: blueviolet;
   cursor: pointer;
 }
+.shoes-buy-add {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  height: 30px;
+  border-radius: 10px;
+  color: blueviolet;
+  background-color: white;
+  border-color: blueviolet;
+  cursor: none;
+}
 .shoes-buy:hover {
   background-color: rgb(94, 6, 177);
 }
