--- a/src/components/core/ShoesList/ShoesList.css
+++ b/src/components/core/ShoesList/ShoesList.css
@@ -1,4 +1,4 @@
-.shoes-wraper {
+.shoes-wrapper {
   width: 100%;
   height: 100%;
   background-color: antiquewhite;
@@ -9,4 +9,15 @@
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+}
+.filter-wrapper {
+  display: flex;
+  margin: 0 10px 10px;
+  padding-top: 10px;
+  align-items: center;
+  font-size: 1.25rem;
+  justify-content: space-around;
+}
+select {
+  margin-left: 10px;
 }
