--- a/src/components/core/Header/HeaderLogIn/LoginForm/LoginForm.css
+++ b/src/components/core/Header/HeaderLogIn/LoginForm/LoginForm.css
@@ -1,15 +1,13 @@
 .loginform__main {
   display: flex;
 }
-.loginform__login {
+.loginform__login,
+.loginform__registration {
   cursor: pointer;
 }
 .loginform__login:hover {
   cursor: pointer;
   text-decoration: underline;
-}
-.loginform__registration {
-  cursor: pointer;
 }
 .loginform__registration:hover {
   cursor: pointer;
