--- a/src/components/core/NavBarSlider/Slider/carousel/Carousel.css
+++ b/src/components/core/NavBarSlider/Slider/carousel/Carousel.css
@@ -1,4 +1,4 @@
-.corusel {
+.carousel {
   height: 100%;
   margin: 0 auto;
   max-width: 100%;
@@ -7,18 +7,18 @@
   border-radius: 20px;
   position: relative;
 }
-.corusel-inner {
+.carousel-inner {
   white-space: nowrap;
   width: 100%;
   height: 100%;
   transition: ease 1s;
 }
-.corusel-item {
+.carousel-item {
   position: relative;
   display: inline-block;
   width: 100%;
 }
-.caurosel-control {
+.carousel-control {
   margin: 0 10px;
   background-color: rgba(0, 0, 0, 0.3);
   border: none;
@@ -42,14 +42,14 @@
   right: 0;
 }
 
-.caurosel-indicators {
+.carousel-indicators {
   position: absolute;
   transform: translateX(-50%);
   left: 50%;
   bottom: 1.5rem;
   z-index: 2;
 }
-.carousel-indecator-item {
+.carousel-indicator-item {
   width: 10px;
   height: 10px;
   border: none;
