--- a/src/components/core/CategoryOfGoods/CategoryOfGoods.css
+++ b/src/components/core/CategoryOfGoods/CategoryOfGoods.css
@@ -1,7 +1,12 @@
 .goods {
-  background-color: rgb(246, 243, 243);
+  width: 100%;
+  height: 100%;
+  background-color: rgb(244, 244, 241);
+  margin-top: 20px;
 }
-.goods__wraper {
+.goods__list {
   width: 85vw;
   margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
 }
